--- a/client/app/src/main/res/layout/window_input.xml
+++ b/client/app/src/main/res/layout/window_input.xml
@@ -40,18 +40,16 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"/>
-        <Button
-            android:id="@+id/win_chat_send"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:background="@drawable/bg_simple_select"
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/win_rv_answer"
+            android:layout_gravity="right"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
-            android:layout_marginLeft="10dp"
-            android:textColor="@color/white"
-            android:gravity="center"
-            android:text="发送"
-            />
+            android:layout_marginLeft="10dp">
+        </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
