完成了复活的功能，完美解决了套接字粘包问题。

--- a/client/app/src/main/res/layout/window_talk.xml
+++ b/client/app/src/main/res/layout/window_talk.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@drawable/bg_bag_shape"
     android:layout_gravity="center"
     android:clickable="true"
@@ -12,31 +12,33 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:padding="10dp"
-        android:gravity="right"
-        android:orientation="vertical">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:visibility="gone"
             android:id="@+id/win_talk_detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textColor="@color/white"
-            android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
-            android:text="说点什么吧。"
+            android:layout_marginRight="10dp"
             android:padding="2dp"
-            android:textSize="15sp" />
+            android:text="说点什么吧。"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:visibility="gone" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/win_talk_rv_answer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
-            android:layout_marginLeft="10dp">
+            android:layout_marginRight="10dp">
 
         </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
