--- a/client/app/src/main/res/layout/item_game_object.xml
+++ b/client/app/src/main/res/layout/item_game_object.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="36dp"
+    android:minHeight="20dp"
+    android:layout_height="wrap_content"
     android:layout_margin="6dp"
     android:background="@drawable/bg_simple_select"
     android:clickable="true"
@@ -36,7 +37,7 @@
                 android:layout_height="match_parent"
                 android:textColor="@color/white"
                 android:text=""
-                android:padding="5dp"
+                android:padding="9dp"
                 android:textSize="13sp" />
         </LinearLayout>
     </FrameLayout>
