1、背包功能完善，同步加锁问题设想，添加属性， 2、修改客户端样式添加功能按钮

--- a/client/app/src/main/res/layout/activity_game.xml
+++ b/client/app/src/main/res/layout/activity_game.xml
@@ -221,6 +221,16 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
+        android:id="@+id/game_btn_trade"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:background="@drawable/bg_button_solid_select"
+        android:text="@string/game_trade"
+        android:textColor="@color/white"
+        android:textSize="13sp"
+        app:layout_constraintEnd_toEndOf="@+id/rv_map_detail"
+        app:layout_constraintTop_toTopOf="@+id/btn_north" />
+    <Button
         android:id="@+id/btn_center"
         android:layout_width="wrap_content"
         android:layout_height="33dp"
@@ -240,7 +250,7 @@
         android:textSize="13sp"
         android:layout_marginLeft="5dp"
         android:onClick="goRight"
-        android:background="@drawable/bg_simple_select"
+        android:background="@drawable/bg_button_select"
         android:text="秋水镇"
         android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@+id/btn_center"
@@ -253,7 +263,7 @@
         android:textSize="13sp"
         android:onClick="goLeft"
         android:layout_marginRight="5dp"
-        android:background="@drawable/bg_simple_select"
+        android:background="@drawable/bg_button_select"
         android:text="河东村"
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/btn_center"
@@ -263,12 +273,12 @@
         android:id="@+id/btn_north"
         android:layout_width="wrap_content"
         android:layout_height="33dp"
-        android:textSize="13sp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/bg_simple_select"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg_button_select"
         android:onClick="goTop"
         android:text="北荒漠"
         android:textColor="@color/white"
+        android:textSize="13sp"
         app:layout_constraintStart_toStartOf="@+id/btn_center"
         app:layout_constraintTop_toBottomOf="@+id/guideline2" />
 
@@ -278,8 +288,8 @@
         android:layout_height="33dp"
         android:textSize="13sp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="15dp"
-        android:background="@drawable/bg_simple_select"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/bg_button_select"
         android:onClick="goDown"
         android:text="寒江岭"
         android:textColor="@color/white"
@@ -330,40 +340,40 @@
         <Button
             android:id="@+id/game_btn_bag"
             android:layout_width="30dp"
-            android:layout_height="35dp"
+            android:layout_height="33dp"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:background="@drawable/bg_simple_select"
+            android:background="@drawable/bg_button_select"
             android:textColor="@color/white"
             android:text="@string/game_bag"
             />
         <Button
             android:id="@+id/game_btn_map"
             android:layout_width="30dp"
-            android:layout_height="35dp"
+            android:layout_height="33dp"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:background="@drawable/bg_simple_select"
+            android:background="@drawable/bg_button_select"
             android:textColor="@color/white"
             android:text="@string/game_map"
             />
         <Button
             android:id="@+id/game_btn_state"
             android:layout_width="30dp"
-            android:layout_height="35dp"
+            android:layout_height="33dp"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:background="@drawable/bg_simple_select"
+            android:background="@drawable/bg_button_select"
             android:textColor="@color/white"
             android:text="@string/game_state"
             />
         <Button
             android:id="@+id/game_btn_chat"
             android:layout_width="30dp"
-            android:layout_height="35dp"
+            android:layout_height="33dp"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:background="@drawable/bg_simple_select"
+            android:background="@drawable/bg_button_select"
             android:textColor="@color/white"
             android:text="@string/game_chat"
             />
