--- a/client/app/src/main/res/layout/window_normal.xml
+++ b/client/app/src/main/res/layout/window_normal.xml
@@ -31,15 +31,15 @@
             android:textColor="@color/white"
             android:textSize="15sp"
             android:visibility="gone" />
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/win_rv_items"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/win_rv_items"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:layout_marginLeft="10dp"-->
+<!--            android:layout_marginRight="10dp">-->
 
-        </androidx.recyclerview.widget.RecyclerView>
+<!--        </androidx.recyclerview.widget.RecyclerView>-->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/win_rv_answer"
             android:layout_width="match_parent"
