副本系统构想，地图-房间 这样的对应关系。

--- a/server/src/main/resources/static/src/views/mud/index.html
+++ b/server/src/main/resources/static/src/views/mud/index.html
@@ -182,7 +182,7 @@
         '              <div class="layui-form-item">\n' +
         '                <label class="layui-form-label">数量</label>\n' +
         '                <div class="layui-input-block">\n' +
-        '                  <input id="edt_num" value="' + (data.num == undefined ? "" : 0) + '" type="text" class="layui-input" autocomplete="off"lay-verify="required" />\n' +
+        '                  <input id="edt_num" value="' + (data.num == undefined ? 0 : data.num) + '" type="text" class="layui-input" autocomplete="off"lay-verify="required" />\n' +
         '                </div>\n' +
         '              </div>\n' +
         '            <div class="layui-form-item">\n' +
